--- a/redthread/redthreadstyles.css
+++ b/redthread/redthreadstyles.css
@@ -48,7 +48,7 @@ h3 {
 
 .container {
 	padding-bottom:30px; 
-	border:2px solid blue;
+	
 	
 }
 
@@ -346,7 +346,7 @@ h3 {
 
    
 
-	.featured { margin-top: 38%; }     
+	.featured { margin-top: 36%; }     
     .featured .f1 {display:block; font-weight: bold;  font-size:50px ; line-height: 1.2em; margin-left: -3px; color: #ffffff; }
     .featured .f2 { letter-spacing: 0.3px; display:block; font-size:18px ;    color: #ffffff;}
     .featured h3 {font-size:14px ; font-weight: bold;letter-spacing:1px; }
@@ -422,11 +422,12 @@ h3 {
         display: inline-block;
       color: #ffffff;
       text-align: center;
-        margin: ;
+       letter-spacing: 1px;
       text-decoration: none;
-      transition: 3s;
+      font-weight: bold;
       padding: .1em;
       margin-right: .5em
+
 
 
 
@@ -450,18 +451,19 @@ h3 {
      .main_list li {
        display: inline-block;
        padding:1em;
+       float:right;
+      
      }
 
 
      .main_list li:first-child {
-       padding:0em;
+       
+       padding-left: 0px;
+
+       float: left;
      }
 
-      .main_list li:last-child {
-       padding:0em;
-       margin-right: 0px;
-       border:1px  solid red;
-     }
+      
 
      .sidenav-content {
       width:0px;
@@ -469,7 +471,7 @@ h3 {
       position: fixed;
       top:0;
       right:0;
-      background-color: #e12227;
+      background-color: rgba(0,0,0,0.7);
       height:100%;
       z-index: 1;
       transition:  width 1s ;
@@ -489,7 +491,7 @@ h3 {
       padding-bottom: 15px;
       margin-top: auto;
       margin-bottom: auto;
-      border:1px solid green;
+     
      }
 
 
