fixed almost everything

--- a/redthread/redthreadstyles.css
+++ b/redthread/redthreadstyles.css
@@ -446,8 +446,8 @@ h3 {
 
 
      .main_list {
-     	height: 100px;
-     	line-height: 100px;
+     	height: 20%;
+     	line-height: 20%;
 
 
      }
