--- a/redthread/redthreadstyles.css
+++ b/redthread/redthreadstyles.css
@@ -575,7 +575,8 @@ a, a:hover {
 	background-size: cover;
     position: relative;
 	width:100% ;
-	height: 94vh;
+	height: 100vh;
+	transition: height ease;
 }
 
 
