--- a/redthread/redthreadstyles.css
+++ b/redthread/redthreadstyles.css
@@ -576,7 +576,9 @@ a, a:hover {
     position: relative;
 	width:100% ;
 	height: 100vh;
-	transition: height ease;
+	transition: height;
+	    transition-duration: 250ms;
+    transition-timing-function: ease;
 }
 
 
