--- a/redthread/redthreadstyles.css
+++ b/redthread/redthreadstyles.css
@@ -80,7 +80,7 @@ h3 {
 
    .big_canvas {
    	background-position: center center;
-   	height:530px;
+   
    }
 
    nav.main {
@@ -159,7 +159,7 @@ h3 {
 
    .big_canvas {
    	background-position: center center;
-   	height: 530px;
+   
    }
 
 
@@ -222,7 +222,7 @@ h3 {
 
 
    .big_canvas {
-   	height:540px;
+   
    }
  
 
@@ -259,7 +259,7 @@ h3 {
 
 
    .big_canvas {
-   	height:540px;
+   
    }
  
      
@@ -288,7 +288,7 @@ h3 {
    }
 
 
-   .big_canvas { background-position: center center;height:550px; }
+   .big_canvas { background-position: center center; }
 	
 	.details { padding-top: 40px;padding-bottom: 30px; }
    	.featured {padding-top: 50px;padding-bottom: 40px;}
@@ -324,7 +324,7 @@ h3 {
 
 
 .big_canvas {
-   	height:550px;
+   
    }
 
 }
@@ -336,7 +336,7 @@ h3 {
 
    
    .big_canvas {
-   	height:550px;
+   	
    }
  
 
@@ -430,7 +430,7 @@ h3 {
 	}
 
 	.big_canvas {
-   	height:560px;
+   
    }
 }
 
@@ -597,6 +597,7 @@ a, a:hover {
 	background-size: cover;
     position: relative;
 	width:100% ;
+	height:100vh;
 	
 }
 
